Small changes in 09 module, start 10

--- a/homeworks/09_module/index.html
+++ b/homeworks/09_module/index.html
@@ -18,6 +18,8 @@
         </script>
         </head>
         <body>
+            <div id = "container" class = "alert alert-info">
+            </div>
         </body>
     </html>
 </html>
