--- a/homeworks/08_module/dad.html
+++ b/homeworks/08_module/dad.html
@@ -19,7 +19,7 @@
     <body>
         <div class="container mb-5">
             <nav class="nav">
-                <a class="nav-link" href="index.html">Мои дела</a>
+                <a class="nav-link" href="my.html">Мои дела</a>
                 <a class="nav-link" href="mom.html">Дела мамы</a>
                 <a class="nav-link" href="#">Дела папы</a>
             </nav>
