--- a/homeworks/09_module/index.html
+++ b/homeworks/09_module/index.html
@@ -18,7 +18,7 @@
         </script>
         </head>
         <body>
-            <div id = "container" class = "alert alert-info">
+            <div id = "main-div" class = "alert alert-info">
             </div>
         </body>
     </html>
