--- a/homeworks/10_module/index.html
+++ b/homeworks/10_module/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        crossorigin="anonymous">
     <title>Список студентов</title>
-
     <script src="main.js"></script>
 </head>
 
 <body>
-    <!-- Этап 1. Создайте верстку элементов, которые будут статичны (неизменны).  -->
+    <form id = "main-form" class="form">
+        <legend>Персональные данные</legend>
+        <div class = "form-row align-items-center">
+            <div>
+                <input class = "form-control" type="text" name="name" placeholder="Имя" id="name" required>
+            </div>
+            <div>
+                <input class = "form-control" type="text" name="surname" placeholder="Фамилия" id="surname" required>
+            </div>
+            <div>
+                <input class = "form-control" type="text" name="patronymic" placeholder="Отчество" id="patronymic" required>
+            </div>
+            <div>
+                <input class = "form-control" type="date" name="birth-date" placeholder="Дата рождения" id="birth-date" min="1900-01-01" max="2024-01-01" required>
+            </div>
+            <div>
+                <input class = "form-control" type="number" name="study-year" placeholder="Год начала обучения" id="study-year" min="2000" max="2023" required>
+            </div>
+            <div>
+                <input class = "form-control" type="text" name="faculty" placeholder="Факультет" id="faculty" required>
+            </div>
+            <div class = "col-auto my-1">
+                <button class = "form-control btn btn-primary" id = "submitButton" type="submit">Отправить</button>
+            </div>
+        </div>
+    </form>
+    <div id = "contanier-filter" >
+        <button id = "btn-filter">
+            <img src = "https://cdn2.iconfinder.com/data/icons/font-awesome/1792/filter-512.png" width="16" height="16">
+            
+        </button>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+              <th scope="col" id = "filter-fio">ФИО</th>
+              <th scope="col" id = "filter-faculty">Факультет</th>
+              <th scope="col" id = "filter-birth-date">Дата рождения и возраст</th>
+              <th scope="col" id = "filter-study-year">Годы обучения</th>
+            </tr>
+        </thead>
+        <tbody id = "table-body">
+
+        </tbody>
+    </table>
 </body>
 
 </html>
